--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,17 @@ code {
   border-bottom-color: var(--border-bottom-color);
 }
 
+* {
+  box-sizing: border-box;
+}
+
+.grid-board {
+  display: grid;
+  grid-template-columns: repeat(var(--cols), var(--tile-size));
+  grid-gap: 0;
+  align-self: flex-start;
+}
+
 :root {
   --bg-color: rgba(150, 150, 150, 1);
 
