added initial next block

--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,13 @@ code {
   border-bottom-color: var(--border-bottom-color);
 }
 
+/* Next Block */
+.next-block {
+  display: grid;
+  grid-template-columns: repeat(4, var(--tile-size));
+  align-self: flex-start;
+}
+
 * {
   box-sizing: border-box;
 }
