--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,29 @@ and 'b'. The '.' represents an empty cell on the grid. */
                        ". b .";
 }
 
+/* controls */
+.controls {
+  grid-area: b;
+  display: flex;
+  flex-direction: row;
+}
+
+/* Control Button */
+.control-button {
+  --size: calc(var(--tile-size) * 2.5);
+  width: var(--size);
+  height: var(--size);
+  text-align: center;
+  font-size: 12px;
+  padding: 0px 1px;
+  display: block;
+  border-width: 5px;
+  border-top-color: var(--button-color-t);
+  border-left-color: var(--button-color-l);
+  border-right-color: var(--button-color-r);
+  border-bottom-color: var(--button-color-b);
+}
+
 /* Grid Square */
 .grid-square {
   border-style: solid;
